--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
-title: HOME PAGE
-description: they said he would never make it; they were correct.
-theme: jekyll-theme-minimal
+title: LINKS
+description: made by smels
